web-infras/parser/tests/fixtures/self-added/let-as-identifier/strict-mode/let-as-func-expr-name/output.txt
[SyntaxError]: unexpect keyword in strict mode (2,20)
2|const f = function let() {
 |                  ^
[SyntaxError]: unexpect keyword in strict mode (2,20)
2|const f = function let() {
 |                  ^
[SyntaxError]: unexpect keyword in strict mode (2,20)
2|const f = function let() {
 |                  ^
